# HillelCpp

./: .gitignore
DZ_11/: CMakeLists.txt  client.cpp  server.cpp
DZ_12/Calc/: CMakeLists.txt  calculatorwindow.cpp  calculatorwindow.h  main.cpp
DZ_2/: DZ_2.cpp  DZ_2.slnx  DZ_2.vcxproj
DZ_2/DZ_2/x64/Debug/: DZ_2.exe.recipe  vc145.idb
DZ_2/DZ_2/x64/Debug/DZ_2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DZ_2.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DZ_3/: DZ_3.cpp  DZ_3.slnx  DZ_3.vcxproj
DZ_3/DZ_3/x64/Debug/: DZ_3.exe.recipe  vc145.idb
DZ_3/DZ_3/x64/Debug/DZ_3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DZ_3.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DZ_4/: DZ_4.cpp  DZ_4.slnx  DZ_4.vcxproj
DZ_4/DZ_4/x64/Debug/: DZ_4.exe.recipe  vc145.idb
DZ_4/DZ_4/x64/Debug/DZ_4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DZ_4.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DZ_5/: DZ_5.cpp  DZ_5.slnx  DZ_5.vcxproj
DZ_5/DZ_5/x64/Debug/: DZ_5.exe.recipe  vc145.idb
DZ_5/DZ_5/x64/Debug/DZ_5.tlog/: CL.command.1.tlog  CL.read.1.tlog  Cl.items.tlog  (+6 more)
DZ_6/: DZ_6.cpp  DZ_6.slnx  DZ_6.vcxproj
DZ_6/DZ_6/x64/Debug/: DZ_6.exe.recipe  vc145.idb
DZ_7/: DZ_7.cpp  DZ_7.slnx  DZ_7.vcxproj
DZ_8/: CMakeLists.txt  example.cpp
DZ_9/: CMakeLists.txt
DZ_9/myApp/: CMakeLists.txt  main.cpp
DZ_9/myLib/: CMakeLists.txt  mylib.cpp  mylib.h
(+9 files in other folders)
